objects/Enrollment_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exit_Comments__c</fullName>
        <label>Exit Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exit_Reason__c</fullName>
        <description>Exit reason from Student at time of withdrawl</description>
        <label>Exit Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>Keeps track of unique enrollment tracking records</description>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Student_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student/Section</label>
        <referenceTo>Student_Section__c</referenceTo>
        <relationshipLabel>Enrollment Tracking</relationshipLabel>
        <relationshipName>Enrollment_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Enrollment Tracking</relationshipLabel>
        <relationshipName>Enrollment_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enrollment Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Current_Record__c</columns>
        <columns>End_Date__c</columns>
        <columns>Exit_Comments__c</columns>
        <columns>Exit_Reason__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Student__c</columns>
        <columns>Student_Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET-{0000000}</displayFormat>
        <label>Enrollment Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>