objects/Enrollment_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Current_Record__c</columns>
    <columns>End_Date__c</columns>
    <columns>Exit_Comments__c</columns>
    <columns>Exit_Reason__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Student__c</columns>
    <columns>Student_Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>